# arena360-toolkit

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml
scripts/: Get-ServiceAudit.ps1  Get-SubnetConfig.ps1  Invoke-CreateRestorePoint.ps1  Invoke-DebloatApply.ps1  Invoke-DesktopCustomize.ps1  Invoke-DeviceClassify.ps1  Invoke-GamingOptimize.ps1  Invoke-LanBulkSetup.ps1  Invoke-LanScan.ps1  Invoke-PostInstallSetup.ps1  Invoke-RemoteOptimize.ps1  Invoke-TelemetryDisable.ps1  _Common.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/manifests/: bloatware-apps.json  bloatware-appx.json  gaming-profile.json  services-baseline.json
src-tauri/resources/scripts/: Enable-WinRM.ps1  Invoke-CreateBackup.ps1  Invoke-DebloatScan.ps1  Invoke-LanBulkSetup.ps1  Invoke-Rollback.ps1  Invoke-ServiceApply.ps1  Invoke-TestWinRM.ps1  Invoke-WinUpdateDisable.ps1  Invoke-WinUpdateEnable.ps1  _Common.ps1
src-tauri/src/: backup.rs  lib.rs  main.rs  powershell.rs  profiles.rs  winrm.rs
src-tauri/src/commands/: lan.rs  local.rs  mod.rs  remote.rs
src-tauri/windows/: installer-hooks.nsi
src/components/: AppChecklist.tsx  ConfirmDangerDialog.tsx  LanDeviceTable.tsx  ServiceTable.tsx  Sidebar.tsx  StatusLog.tsx
src/hooks/: useAdminCheck.ts  useTauriEvents.ts
src/pages/: DashboardPage.tsx  GamingPage.tsx  LanPage.tsx  LogsPage.tsx  PrivacyPage.tsx  RemotePage.tsx  ServicesPage.tsx  UninstallPage.tsx  WinUpdatePage.tsx
(+1 files in other folders)
